--- a/index.html
+++ b/index.html
@@ -17,19 +17,28 @@
   <body>
     <header class="banner">
         <div class="container">
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="index.html"><img src="img/logo.png" alt="..." class="logo"></a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="..."></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Go Hiking</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                  </form>
                 </div>
-                <div class="col-md-4 offset-md-7">
-                    <ul class="header-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Go Hiking</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#" class="btn btn-info">Login</a></li>
-                    </ul>
-                </div>
-            </div>
+            </nav>
             <div class="row">
                 <div class="col-md-4">
                     <div class="banner-inner">
@@ -185,8 +194,8 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 extra-gap">
-                    <div class="footer-inner">
+                <div class="col-md">
+                    <div class="footer-inner first-footer">
                         <h5>Contact us</h5>
                         <p>Muncak hiking society <br/>
                             8605 Second Ave.<br/>
@@ -203,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 extra-gap">
+                <div class="col-md">
                     <div class="footer-inner">
                         <h5>about us</h5>
                         <a href="#">Our Mission</a><br/>
@@ -213,7 +222,7 @@
                         <a href="#">Media Center</a>
                     </div>
                 </div>
-                <div class="col-md-2 extra-gap">
+                <div class="col-md">
                     <div class="footer-inner">
                         <h5>our programs</h5>
                         <a href="#">Hike The Hill</a><br/>
@@ -221,7 +230,7 @@
                         <a href="#">Alternative Break</a>
                     </div>
                 </div>
-                <div class="col-md-2 extra-gap">
+                <div class="col-md">
                     <div class="footer-inner">
                         <h5>support trails</h5>
                         <a href="#">Donate</a><br/>
@@ -230,7 +239,7 @@
                         <a href="#">Hiker Store</a>
                     </div>
                 </div>
-                <div class="col-md-2 extra-gap-last">
+                <div class="col-md">
                     <div class="footer-inner">
                         <h5>hiking resources</h5>
                         <a href="#">Hikes Near You</a><br/>
